--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.13.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "^15.5.9",
+    "@reduxjs/toolkit": "^2.3.0",
+    "react-redux": "^9.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5"
