--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
+    "framer-motion": "^12.26.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
