--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/third-parties": "^16.1.6",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "framer-motion": "^12.26.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "^15.5.12",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
