--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/third-parties": "^16.1.6",
     "@reduxjs/toolkit": "^2.11.2",
+    "@tailwindcss/typography": "^0.5.19",
     "axios": "^1.13.2",
     "framer-motion": "^12.26.2",
     "js-cookie": "^3.0.5",
@@ -22,6 +23,7 @@
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
+    "sonner": "^2.0.7",
     "swiper": "^12.1.0"
   },
   "devDependencies": {
